# orchestration

./: .env.example  .gitignore  Dockerfile  Dockerfile_ai_image_detection  README.md  docker-compose.yml  pyproject.toml  store_ch_secrets.py  store_s3_creds.py  upload_output_for_incomplete_data_fetching_run.py
ansible/: .env.example  .gitignore  README.md  basic-config.sh  check_worker_running.yml  config_check.yml  configure_new_worker_hosts.yml  create_ssh_configs_from_inventory_ini.py  docker_prune.yml  install_tmux.yml  inventory.ini.example  launch_worker.yml
apis/: soundcharts.py
deployments/soundcharts/: artist_top_sp_regions_tbls_copy.py  artists_tbl_copy.py  id_matching_tbl_copy.py
deployments/spotify/: ch_k8s_isrc_track_meta_de.py  fetch_missing_tracks.py  regional_streams_tbl_copy.py  track_id_meta_de_copy.py
flow_utils/: README.md  batch_processing.py  pyproject.toml
flows/: ch_copy_table.py  ch_update_spotify_views.py  deploy.py
flows/clickhouse/: copy_data.py  copy_table.py  run_queries.py  update_refreshable_materialized_views.py  update_spotify_views.py
flows/soundcharts/: __init__.py  artist_local_audience.py  artists.py  artists_by_platform_id.py  artists_local_streaming_audience.py
flows/spotify/: artists.py
lib/flow-utils/: README.md  pyproject.toml
lib/flow-utils/src/flow_utils/: batch_processing.py  flow_deployment.py  setup_blocks.py
lib/flow_utils/: pyproject.toml
lib/flow_utils/src/flow-utils/: __init__.py  batch_processing.py
orchestration/flows/clickhouse/: copy_table.py  run_queries.py  update_spotify_views.py
orchestration/flows/s3/: backup.py
orchestration/flows/soundcharts/: artists.py  artists_by_platform_id.py
orchestration/utils/: date.py  scraping.py
setup/: pyproject.toml
setup/blocks/: dockerhub.py
todo_move_to_lib/: README.md
todo_move_to_lib/apis/distributed_task_flows/: __init__.py
todo_reorganize/: README.md
todo_reorganize/deployments/soundcharts/: artists_tbl_copy.py  id_matching_tbl_copy.py
todo_reorganize/deployments/spotify/: artists_copy.py  fetch_missing_artists.py  track_id_meta_de_copy.py
todo_reorganize/flows/clickhouse/: __init__.py  copy_table.py  update_refreshable_materialized_views.py
todo_reorganize/flows/s3/: __init__.py
todo_reorganize/flows/soundcharts/: artists.py  artists_by_platform_id.py
todo_reorganize/flows/spotify/: tracks.py
utils/: flow_deployment.py  public_ip.py  scraping.py  zstd.py
utils/databases/: clickhouse.py
workers/ai_image_detection/: Dockerfile  __init__.py  main.py  pyproject.toml
