[project]
name = "orchestration"
version = "0.1.0"
description = "Various orchestration tasks and related code, separated into packages that share common dependencies and add specific ones as needed (to the best of my knowledge)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "lib/*",
    "workers/*", "setup",
]
