[project]
name = "flow-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prefect>=3.4.20",
    "prefect-aws>=0.5.16",
    "requests>=2.32.5",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
