[project]
name = "flow-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prefect>=3.4.20",
    "prefect-aws>=0.5.16",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"